# cargo-table-deps

./: Cargo.toml
src/: cli.rs  main.rs  manifest.rs  metadata.rs
src/manifest/: document.rs  mod.rs
